--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -12,13 +12,13 @@
 {% block body_block %}
     {% if sid %}
         {% if statement %}
-            <div class="statement statement-outer text-left jumbotron">
+            <div class="neverever-box statement-outer text-left jumbotron">
                 <h3>Never have I ever...</h3>
-                <div class="statement statement-inner text-center">
+                <div class="neverever-box statement-inner text-center">
                     <h2><b>{{ statement.title }}</b></h2>
                 </div>
             </div>
-            <div class="statement text-right">
+            <div class="neverever-box text-right">
                 {% for cat in statement.categories.all %}
                   <div class="label label-default">{{ cat.name }}</div>
                 {% endfor %}
@@ -30,17 +30,17 @@
     {% endif %}
     {% if no_more_statements %}
         <div class="container-fluid text-center">
-            <p id="No-statement" class="alert alert-danger statement warning-spacing"><b class="warning-head">Sorry! :(</b><br>
+            <p id="No-statement" class="alert alert-danger neverever-box warning-spacing"><b class="warning-head">Sorry! :(</b><br>
                 <b>There are no more statements to display.You played through all of them.</b><br>
                 Please select more categories, start a new game, or add statements yourself!</p>
         </div>
     {% else %}
-    <div id="answer_zone" class="statement">
+    <div id="answer_zone" class="neverever-box">
         <form id="answer_form" method="post" action="/play/">
             {% for form, player in formlist %}
                 {% csrf_token %}
                 {% for field in form.visible_fields %}
-                <div class="player-box">
+                <div class="switch-box">
                     <span class="player-name text-left">
                         <div class="editable_name" contenteditable="false" data-playernum="{{ player.stamp }}"
                              data-toggle="popover" title="What's your name?"
@@ -60,14 +60,14 @@
                 </div>
                 {% endfor %}
             {% endfor %}
-            <div class="statement text-center row-spacing-bottom">
+            <div class="neverever-box text-center row-spacing-bottom">
                 <input class="btn btn-primary btn-lg center-block" type="submit" value="Next Statement">
             </div>
         </form>
     </div>
     {% endif %}
 
-    <div class="statement text-left">
+    <div class="neverever-box text-left">
             <div class="inline">
                 <button id="add_button" class="btn btn-default" type="button">Add Player</button>&nbsp;
                 <!--below section adds in the like button-->
