--- a/templates/neverever/playOptions.html
+++ b/templates/neverever/playOptions.html
@@ -23,7 +23,7 @@
                         <h2>enable adult content</h2>
                     </div>
                      Enable NSFW (adult content) statements:<br>
-                     <div class="cat-box">
+                     <div class="switch-box">
                         <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox">
                      </div>
                  </div>
@@ -39,17 +39,14 @@
                     </div>
                 {% endif %}
                 Please choose your preferred categories:
-                <div class="container text-center">
+                <div class="neverever-box ne-box-adjust text-center">
                     {% for cat in form.categories.field.choices %}
-                        <div class="cat-box text-left">
+                        <div class="switch-box text-left">
                             {{ cat.1 }}<br>
                             <input id="id_categories_{{ cat.0 }}"
                                    {% if cat.0 in field.value %}checked="checked"{% endif %}
                                    name="categories" value="{{ cat.0 }}" type="checkbox">
                         </div>
-                        {% if cat.0|divisibleby:3 %}
-                            <br>
-                        {% endif %}
                     {% endfor %}
                 </div>
             {% endif %}
