--- a/static/css/play.css
+++ b/static/css/play.css
@@ -32,3 +32,10 @@ h3 {
 #answer_form {
     padding-top: 20px;
 }
+
+.footer-buttons {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 45px;
+}
