--- a/templates/neverever/stats.html
+++ b/templates/neverever/stats.html
@@ -9,40 +9,54 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Statistics</h1>
-    <h3>Under development</h3>
+    <h1>statistics</h1>
+    <p class="lead">Are you shy? Gain confidence from seeing the shit other people do.</p>
 
-    {% if globalCounter %}
-        <br />Total games: {{ globalCounter.total_sessions }}
-        <br />Total number of players: {{ globalCounter.total_players }}
-        <br />
-    {% endif %}
+    <div class="container">
+        <div id="sub-heading">
+            <h4><span class="glyphicon glyphicon-globe"></span></h4>
+            <h2>global counters</h2>
+        </div>
+        {% if globalCounter %}
+        So far, <strong>{{ globalCounter.total_sessions }}</strong> games have been played, with a total of
+        <strong>{{ globalCounter.total_players }}</strong> players.
+        {% endif %}
+    </div>
+
     <br/>
     <ul class="menu"> 
-        <li class="dropdown"> <a href ="#" data-toggle="dropdown" class="dropdown-toggle">Categories - Hover Here<b class="caret"></b></a>
+        <li class="dropdown">
+            <a href ="#" data-toggle="dropdown" class="dropdown-toggle">Categories - Hover Here<b class="caret"></b></a>
             <ul class="dropdown-menu">
-            {% for category in categories %}
-                <li class="cat_list_item" data-name="{{category.name}}">{{ category.name }} </li> /
+            {% for category in categories.all %}
+                <li class="cat_list_item" data-name="{{category.name}}">{{ category.name }}</li> /
             {% endfor %}
             </ul>
         </li>
     </ul>
-    <br/>
-<div id="statements">
-    {% if statements %}
-        <strong>Never have I ever...</strong>
-        <br/>
-        {% for statement in statements %}
-            <span class="single_statement" data-title="{{statement.title}}">
-                {{ statement.title }}
-            </span>
-            ||
-        {% endfor %}
-    {% endif %}
-</div>
-<div id="statement_stats">
-</div>
-    <br><a href="{%  url 'index' %}">Return to main page</a>
+    <br>
+        <div id="statements">
+            {% if statements %}
+                <strong>Never have I ever...</strong>
+                <br/>
+                {% for statement in statements %}
+                    <span class="single_statement" data-title="{{statement.title}}">
+                        {{ statement.title }}
+                    </span>
+                    ||
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div id="statement_stats">
+        </div>
+    <div class="container">
+        <div class="row row-spacing-top">
+            <input type="submit" name="submit" value="Submit" class="btn btn-primary btn-lg btn-ne-add"/>
+        </div>
+        <div class="row row-spacing">
+            <a href="{% url 'index' %}" class="btn btn-default btn-ne-add">Return to Main Page</a>
+        </div>
+    </div>
 {% endblock %}
 
 {% block footer_block %}
