counter issue fix

--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -16,7 +16,7 @@
     <div class="vertical-center">
         <div class="container-fluid">
                 <div class="row row-spacing-top">
-                        <a href="/play" class="btn btn-primary btn-lg center-block btn-ne-main">Play</a>
+                    <a href="/play" class="btn btn-primary btn-lg center-block btn-ne-main">Play</a>
                 </div>
                 <div class="row row-spacing">
                     <a href="/new-statement" class="btn btn-default btn-lg center-block btn-ne-main">New Statement</a>
@@ -26,8 +26,8 @@
 
     <div id="cookie_box">
         Our site requires cookies to function. By using this site you agree to nothing, because we
-        don't have any terms or conditions. Have fun. <a href="#" class="cookie_box_close no-wrap"><strong>Close</strong>
-        <span class="glyphicon glyphicon-remove"></span></a>
+        don't have any terms or conditions. Have fun. <a href="#" class="cookie_box_close no-wrap">
+        <strong>Close</strong> <span class="glyphicon glyphicon-remove"></span></a>
     </div>
 
     <footer class="footer">
@@ -38,6 +38,6 @@
 {% block footer_block %}
     <!-- AJAX -->
     <script src="{% static "js/neverever-index-ajax.js" %}"></script>
-    <!-- Cookie Crap -->
+    <!-- Cookie Note -->
     <script src="{% static "js/cookienote.js" %}"></script>
 {% endblock %}
