--- a/templates/neverever/stats.html
+++ b/templates/neverever/stats.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %} - Statistics{% endblock %}
+{% block title %} - statistics{% endblock %}
 
 {% block head_block %}
     <link rel="stylesheet" href="{% static "css/stats.css" %}" />
