removed repeated html from stats, used template tag again

--- a/templates/neverever/stats.html
+++ b/templates/neverever/stats.html
@@ -1,6 +1,7 @@
 {% extends 'neverever/baseTemplate.html' %}
 
 {% load staticfiles %}
+{% load neverever_extras %}
 
 {% block title %} - Statistics{% endblock %}
 
@@ -29,18 +30,10 @@
     </ul>
     <br/>
 <div id="statements">
-    {% if statements %}
-        <strong>Never have I ever...</strong>
-        <br/>
-        {% for statement in statements %}
-            <span class="single_statement" data-title="{{statement.title}}">
-                {{ statement.title }}
-            </span>
-            ||
-        {% endfor %}
-    {% endif %}
+    {% get_statement_titles %}
 </div>
 <div id="statement_stats">
+    <!-- via AJAX when statement is selected -->
 </div>
     <br><a href="{%  url 'index' %}">Return to main page</a>
 {% endblock %}
