--- a/templates/neverever/stats.html
+++ b/templates/neverever/stats.html
@@ -75,10 +75,7 @@
         <div id="statement_stats">
         </div>
     <div class="container">
-        <div class="row row-spacing-top">
-            <input type="submit" name="submit" value="Submit" class="btn btn-primary btn-lg btn-ne-add"/>
-        </div>
-        <div class="row row-spacing">
+        <div class="row row-spacing-bottom">
             <a href="{% url 'index' %}" class="btn btn-default btn-ne-add">Return to Main Page</a>
         </div>
     </div>
