stats page css game and global css changes

--- a/templates/neverever/about.html
+++ b/templates/neverever/about.html
@@ -8,7 +8,7 @@
     <h1>about us</h1>
     <p class="lead">A bit of information on the project and its developers.</p>
 
-    <div id="sub-heading">
+    <div class="sub-heading">
         <h4><span class="glyphicon glyphicon-folder-open"></span></h4>
         <h2>the project</h2>
     </div>
@@ -25,7 +25,7 @@
         <iframe src="https://ghbtns.com/github-btn.html?user=Redfielder&repo=NeverEver&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
     </div>
 
-    <div id="sub-heading">
+    <div class="sub-heading">
         <h4><span class="glyphicon glyphicon-user"></span></h4>
         <h2>the team</h2>
     </div>
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <div id="sub-heading">
+    <div class="sub-heading">
         <h4><span class="glyphicon glyphicon-education"></span></h4>
         <h2>the university</h2>
     </div>
