--- a/static/css/neverever.css
+++ b/static/css/neverever.css
@@ -75,13 +75,13 @@ h1 {
     padding-top: 15px;
 }
 
-#sub-heading h2, h4 {
+.sub-heading h2, h4 {
     display: inline;
     padding-left: 5px;
     padding-right: 5px;
 }
 
-#sub-heading {
+.sub-heading {
     padding-top: 15px;
     padding-bottom: 10px;
 }
