--- a/templates/neverever/stats.html
+++ b/templates/neverever/stats.html
@@ -21,15 +21,16 @@
         {% if globalCounter %}
             So far, <strong>{{ globalCounter.total_sessions }}</strong> games have been played, with a total of
             <strong>{{ globalCounter.total_players }}</strong> players.
-            <br />
-            {% if nCategories%}
-                number of Categories: {{ nCategories }} <br />
+            <br>
+            {% if nCategories %}
+                We have <strong>{{ nCategories }}</strong> categories, with
             {% endif %}
-            {% if nStatements%}
-                number of Statements: {{ nStatements }} <br />
+            {% if nStatements %}
+                a total of <strong>{{ nStatements }}</strong> statements.<br>
             {% endif %}
             {% if nAnswers %}
-                number of Answers provided so far: {{ nAnswers }} <br />
+                From our players, we have recorded a total of <strong>{{ nAnswers }}</strong> answers.<br>
+                Let's keep those numbers rising. :)
             {% endif %}
         {% endif %}
         {% if category.all %}
